# CFDCourse25

./: CMakeLists.txt  board-notes.txt  readme.md
doc/: exam.txt  grades.ods
doc/lectures/: .gitignore  Makefile  cfd_course_25.aux  cfd_course_25.out  cfd_course_25.pytxcode  cfd_course_25.tex  cfd_course_25.toc  clisting.aux  eq-basis.aux  eq-geometry.aux  eq-geometry.tex  eq-partint.aux  eq-vectors.aux  howto-build.aux  howto-build.tex  howto-git.aux  howto-git.tex  howto-hybmesh.aux  howto-paraview.aux  latex_defs.aux  latex_defs.tex  lect01.aux  lect01.tex  lect02.tex  lect03.tex  lect04.tex  lect05.tex  lect06.tex  lect07.tex  lect08.tex  lect09.tex  lect10.tex  lect11.tex  lect12.tex  lect13.tex  lect14.tex  lect15.tex  lect16.tex  lect17.tex  lect18.tex  (+11 more)
doc/lectures/_minted-cfd_course_25/: 27CF08FB071F129F1C9ACFBBCA67D96AFB44CBAA93BB9A9ED2483F17617E902A.pygtex  9E416C304496A9E0DC44DE95100E52CB6AD9D9E7D6C70123318B0DBA7239B680.pygtex  9EF7AC987AEBF3E743B8C68D56B4206A6AD9D9E7D6C70123318B0DBA7239B680.pygtex  BAC8737B5840D8981289D92A6B19BFA86AD9D9E7D6C70123318B0DBA7239B680.pygtex  C52D9AAAD00F4DDDF7809D292E821D3C6AD9D9E7D6C70123318B0DBA7239B680.pygtex  C62A699F8766347439B068491B4E680A6AD9D9E7D6C70123318B0DBA7239B680.pygtex  (+1 more)
src/: CMakeLists.txt
src/cfd/: CMakeLists.txt  cfd25.cpp
src/test/: CMakeLists.txt  cavity_fem_cbs_test.cpp  cavity_fvm_coupled_test.cpp  cavity_fvm_test.cpp  cavity_simple_test.cpp  cfd25_test.cpp  cfd25_test.hpp  convdiff_fem_test.cpp  cylinder_fvm_pimple_test.cpp  fvm_assembly_test.cpp  geom_test.cpp  grid_test.cpp  heat_transfer_piso_test.cpp  linear_simple_test.cpp  mat_test.cpp  obstacle_nonstat_simple_test.cpp  obstacle_simple_test.cpp  poiseuille_simple_test.cpp  poisson_fdm_solve_test.cpp  poisson_fem_solve_test.cpp  poisson_fvm_solve_test.cpp  transport_fvm_solve_test.cpp  transport_solve_test.cpp
(+35 files in other folders)
